@@ -156,7 +156,7 @@ def main():
           package_dir={'': 'src'},
           packages=setuptools.find_packages('src'),
           provides=['s3ql'],
-          ext_modules=[Extension('s3ql._deltadump', ['src/s3ql/_deltadump.c'],
+          ext_modules=[Extension('s3ql.deltadump', ['src/s3ql/deltadump.c'],
                                  extra_compile_args=compile_args,
                                  extra_link_args=[ '-lsqlite3'])],
           data_files=[ ('share/man/man1',
