@@ -3,6 +3,10 @@ UNRELEASED, S3QL tip
   * Cycling of metadata backups when using the local backend now
     takes much less time.
 
+  * It is no longer required that S3QL and Python APSW be linked to
+    the same SQLite shared library. However, they still have to use
+    identical SQLite versions compiled with identical settings.
+
 2013-04-09, S3QL 1.14
 
   * Reduced CPU consumption when S3QL is idle.
